--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
-  "name": "@funbox/vscode-apib-ls",
+  "name": "vscode-apib-ls",
   "description": "API Blueprint language server",
   "version": "1.0.0",
   "engines": {
     "vscode": "^1.43.0"
   },
+  "repository": {
+    "type": "git",
+    "url": ""
+  },
+  "publisher": "FunBox",
   "activationEvents": [
     "onLanguage:plaintext"
   ],
