--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
     "node": "*"
   },
   "dependencies": {
-    "@funbox/crafter": "file:./funbox-crafter-2.1.1.tgz",
+    "@funbox/crafter": "2.2.0",
     "vscode-languageserver": "^6.1.1",
     "vscode-languageserver-textdocument": "^1.0.1"
   },
