--- a/server/package.json
+++ b/server/package.json
@@ -10,5 +10,15 @@
     "vscode-languageserver": "^6.1.1",
     "vscode-languageserver-textdocument": "^1.0.1"
   },
-  "scripts": {}
+  "scripts": {
+    "test": "nyc mocha",
+    "dev": "nodemon --exec 'npm test' -e 'js apib'"
+  },
+  "devDependencies": {
+    "chai": "4.3.3",
+    "mocha": "8.3.0",
+    "nodemon": "2.0.7",
+    "nyc": "15.1.0",
+    "sinon": "9.2.4"
+  }
 }
