--- a/package.json
+++ b/package.json
@@ -77,6 +77,18 @@
     "eslint": "5.16.0",
     "eslint-plugin-import": "2.17.2",
     "eslint-plugin-jsx-a11y": "6.2.1",
-    "eslint-plugin-react": "7.12.4"
+    "eslint-plugin-react": "7.12.4",
+    "husky": "4.3.0",
+    "lint-staged": "10.5.0"
+  },
+  "lint-staged": {
+    "*.js": [
+      "eslint --fix --cache -c .eslintrc.js"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged -q"
+    }
   }
 }
