--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "@types/vscode": "1.43.0",
     "glob": "^7.1.7",
+    "mocha": "^9.0.0",
     "vscode-test": "^1.5.2"
   }
 }
