--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
   },
   "devDependencies": {
     "@types/vscode": "1.43.0",
+    "fs-extra": "^10.0.0",
     "glob": "^7.1.7",
     "mocha": "^9.0.0",
     "vscode-test": "^1.5.2"
