--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "https://github.com/funbox/vscode-apib-ls"
   },
   "publisher": "FunBox",
   "activationEvents": [
