--- a/package.json
+++ b/package.json
@@ -72,7 +72,8 @@
     "test": "npm run test-server && npm run test-client",
     "test-client": "cd client && ./tests/run.sh",
     "test-server": "cd server && npm test",
-    "lint": "eslint --cache -c .eslintrc.js --ext .js ./"
+    "lint": "eslint --cache -c .eslintrc.js --ext .js ./",
+    "lawyer": "lawyer . ./client ./server"
   },
   "devDependencies": {
     "@funboxteam/eslint-config": "5.3.0",
