--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vscode-apib-ls",
   "description": "API Blueprint language server",
   "author": "FunBox LLC <wanted@fun-box.ru> (https://funbox.ru)",
-  "license": "MIT",
+  "license": "Apache-2.0",
   "version": "1.6.0",
   "engines": {
     "vscode": "^1.43.0"
