--- a/package.json
+++ b/package.json
@@ -89,7 +89,9 @@
     "eslint-plugin-jsx-a11y": "6.2.3",
     "eslint-plugin-react": "7.27.0",
     "husky": "4.3.8",
-    "lint-staged": "10.5.0"
+    "lint-staged": "10.5.0",
+    "vscode-oniguruma": "1.6.2",
+    "vscode-textmate": "7.0.1"
   },
   "lint-staged": {
     "*.js": [
