--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
   },
   "devDependencies": {
     "@funboxteam/eslint-config": "7.1.0",
+    "esbuild": "0.16.12",
     "eslint": "7.32.0",
     "eslint-plugin-import": "2.25.2",
     "eslint-plugin-jsx-a11y": "6.2.3",
