Set up extension bundling

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "activationEvents": [
     "onLanguage:apib"
   ],
-  "main": "./client/extension",
+  "main": "./dist/client/extension",
   "contributes": {
     "configuration": {
       "type": "object",
@@ -74,6 +74,11 @@
     ]
   },
   "scripts": {
+    "vscode:prepublish": "npm run clean-dist-dir && npm run esbuild-min",
+    "clean-dist-dir": "rm -rf dist/",
+    "esbuild-base": "esbuild ./client/extension.js ./server/server.js --bundle --outdir=dist --define:process.env.BASE_DIR='\"dist\"' --external:vscode --format=cjs --platform=node",
+    "esbuild": "npm run esbuild-base -- --sourcemap",
+    "esbuild-min": "npm run esbuild-base -- --minify",
     "postinstall": "cd client && npm install && cd ../server && npm install && cd ..",
     "dev": "cd server && npm run dev",
     "test": "npm run test-server && npm run test-client",
