--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,6 +26,12 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: npm ci
+
+    # npm of 14.x is not compatible with lockfileVersion 3, that's why we use `install` here instead of `ci`
+    - if: matrix.node-version == '14.x'
+      run: npm install
+    - if: matrix.node-version != '14.x'
+      run: npm ci
+
     - run: npm run lint
     - run: npm test
